# energy-monitor-app

./: .gitignore  CMakeLists.txt  EnergyUI.pro  LICENSE  README.md  command.h  date_time.h  energy_monitor  energy_monitor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  power_dao.cpp  power_dao.h  processor.h  resource.qrc  system.cpp  system.h
EnergyUI Zihan/: EnergyUI.pro  EnergyUI.pro.user.22  EnergyUI.pro.user.5cca08a.4.10-pre1  mainwindow.cpp  mainwindow.h  mainwindow.ui  qss.qrc
data/: days_power_usage.csv  hours_power_usage.csv
docs/html/: annotated.html  classDateTime-members.html  classDateTime.html  classFormat-members.html  classFormat.html  classMainWindow-members.html  classMainWindow.html  classMemory-members.html  classMemory.html  classPower-members.html  classPower.html  classPowerDAO-members.html  classPowerDAO.html  classProcess.html  (+34 more)
forms/: mainwindow.ui
headers/: format.h  mainwindow.h  power.h  power_dao.h  system.h
include/: base_dao.h  display.h  format.h  mainwindow.h  memory.h  power.h  power_dao.h  process.h  processor.h  system.h  system_parser.h  view.h
intelEnergyMonitorApp/: mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: icons.qrc
src/: bind.cpp  bind.h  date_time.cpp  display.cpp  format.cpp  linux_parser.cpp  linux_parser.h  main.cpp  mainwindow.cpp  memory.cpp  memory.h  power.cpp  power.h  power_dao.cpp  power_monitor.cpp  power_monitor.h  power_usage.csv  process.cpp  process.h  processor.cpp  processor.h  system.cpp  system.h  system_parser.cpp  test.cpp  view.cpp  view.h
(+70 files in other folders)
